--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==18:40:51=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==18:42:26=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1928.88</p>
+                <p id="net-worth">1930.88</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-352.50</p>
+                <p id="unrealized-pl-value">-350.50</p>
             </div>
         </div>
     </header>
@@ -115,7 +115,7 @@
 SellLimit: 17347.0
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-106.25=====0.52</h2>
+            <h2 id="column2-title">MESM24==P/L:-107.5</h2>
 
         </div>
         <div class="column">
