--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==20:29:38=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==20:31:14=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1942.88</p>
+                <p id="net-worth">1939.13</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-338.50</p>
+                <p id="unrealized-pl-value">-342.25</p>
             </div>
         </div>
     </header>
@@ -115,7 +115,7 @@
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-96.25</h2>
+            <h2 id="column2-title">MESM24==P/L:-101.25=====0.52</h2>
 
         </div>
         <div class="column">
