--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==21:20:34=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==21:22:09=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1940.88</p>
+                <p id="net-worth">1943.38</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-340.50</p>
+                <p id="unrealized-pl-value">-338.00</p>
             </div>
         </div>
     </header>
@@ -112,15 +112,15 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
-            <p id="stocks-content-1d">{{stocks-content-1}}</p>
+SellLimit: 17323.5
         </div>
         <div class="column">
-            <h2 id="column2-title">{{COLUMN2_TITLE}}</h2>
-            <p id="stocks-content-2d">{{stocks-content-2}}</p>
+            <h2 id="column2-title">MESM24==P/L:-90.0</h2>
+
         </div>
         <div class="column">
-            <h2 id="column3-title">{{COLUMN3_TITLE}}</h2>
-            <p id="stocks-content-3d">{{stocks-content-3}}</p>
+            <h2 id="column3-title">M2KM24==P/L:-248.5</h2>
+
         </div>
         <div class="column">
             <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
