--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==21:41:08=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==21:42:41=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1945.13</p>
+                <p id="net-worth">1945.88</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-336.25</p>
+                <p id="unrealized-pl-value">-335.50</p>
             </div>
         </div>
     </header>
@@ -112,14 +112,14 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
+SellLimit: 17316.0
+        </div>
+        <div class="column">
+            <h2 id="column2-title">MESM24==P/L:-83.75</h2>
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-82.5</h2>
-
-        </div>
-        <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-255.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-255.0</h2>
 
         </div>
         <div class="column">
