--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==01:04:41=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==01:06:18=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1937.38</p>
+                <p id="net-worth">1936.63</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-344.00</p>
+                <p id="unrealized-pl-value">-344.75</p>
             </div>
         </div>
     </header>
@@ -112,26 +112,23 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
---
 SellLimit: 17333.25
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-92.5</h2>
---LIST OF TRADE(3)--
-MNQM24
-        </div>
-        <div class="column">
-            <h2 id="column3-title">MNQM24</h2>
---
-SellLimit: 17333.25
-        </div>
-        <div class="column">
-            <h2 id="column4-title">MESM24==P/L:-93.75</h2>
+            <h2 id="column2-title">MESM24==P/L:-91.25</h2>
 
         </div>
         <div class="column">
-            <h2 id="column5-title">M2KM24==P/L:-253.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-253.0</h2>
 
+        </div>
+        <div class="column">
+            <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
+            <p id="stocks-content-4d">{{stocks-content-4}}</p>
+        </div>
+        <div class="column">
+            <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
+            <p id="stocks-content-5d">{{stocks-content-5}}</p>
         </div>
         <div class="column">
             <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
