--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==02:22:53=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==02:24:16=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1925.91</p>
+                <p id="net-worth">1926.41</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-341.50</p>
+                <p id="unrealized-pl-value">-341.00</p>
             </div>
         </div>
     </header>
@@ -112,26 +112,23 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
---LIST OF TRADE(3)--
---
-        </div>
-        <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-82.5</h2>
---LIST OF TRADE(3)--
-MNQM24
-        </div>
-        <div class="column">
-            <h2 id="column3-title">MNQM24</h2>
---LIST OF TRADE(3)--
---
-        </div>
-        <div class="column">
-            <h2 id="column4-title">MESM24==P/L:-85.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column5-title">M2KM24==P/L:-257.0</h2>
+            <h2 id="column2-title">MESM24==P/L:-81.25</h2>
 
+        </div>
+        <div class="column">
+            <h2 id="column3-title">M2KM24==P/L:-259.5</h2>
+
+        </div>
+        <div class="column">
+            <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
+            <p id="stocks-content-4d">{{stocks-content-4}}</p>
+        </div>
+        <div class="column">
+            <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
+            <p id="stocks-content-5d">{{stocks-content-5}}</p>
         </div>
         <div class="column">
             <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
