--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==02:50:34=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==02:52:08=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1916.41</p>
+                <p id="net-worth">1915.66</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-351.00</p>
+                <p id="unrealized-pl-value">-351.75</p>
             </div>
         </div>
     </header>
@@ -115,11 +115,11 @@
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-100.0</h2>
+            <h2 id="column2-title">MESM24==P/L:-103.75=====0.07</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-250.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-248.5</h2>
 
         </div>
         <div class="column">
