--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==02:52:08=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==02:53:41=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
@@ -115,11 +115,11 @@
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-103.75=====0.07</h2>
+            <h2 id="column2-title">MESM24==P/L:-105.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-248.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-246.0</h2>
 
         </div>
         <div class="column">
