--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==03:35:18=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==03:36:56=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1901.16</p>
+                <p id="net-worth">1902.41</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-366.25</p>
+                <p id="unrealized-pl-value">-365.00</p>
             </div>
         </div>
     </header>
@@ -115,11 +115,11 @@
 BuyLimit: 17362.5
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-115.0</h2>
+            <h2 id="column2-title">MESM24==P/L:-121.25=====0.52</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-248.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-241.0</h2>
 
         </div>
         <div class="column">
