--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==04:10:45=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==04:12:20=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
@@ -115,11 +115,11 @@
 BuyLimit: 17367.0
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-131.25=====0.52</h2>
+            <h2 id="column2-title">MESM24==P/L:-135.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-242.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-237.0</h2>
 
         </div>
         <div class="column">
