--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==05:10:31=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==05:12:06=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1872.41</p>
+                <p id="net-worth">1873.16</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-395.00</p>
+                <p id="unrealized-pl-value">-394.25</p>
             </div>
         </div>
     </header>
@@ -115,11 +115,11 @@
 BuyLimit: 17389.25
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-128.75=====0.52</h2>
+            <h2 id="column2-title">MESM24==P/L:-132.5</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-265.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-265.0</h2>
 
         </div>
         <div class="column">
